# dog_breed_classifier

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/raw/: lfw_sample.rar
docs/: mkdocs.yml
docs/docs/: index.md
dog_breed_classifier/: dataset.py  plots.py
dog_breed_classifier/modelling/: predict.py
tests/: test_data_loader.py  test_model_prediction.py
