[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dog_breed_classifier"
version = "0.0.1"
description = "Classify dog breeds and human facen using CNN's and Python"
authors = [
  { name = "Manuel Rafael Vazquez Gandullo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dog_breed_classifier"]
force_sort_within_sections = true
